multiple design changes + fixes

--- a/cattlefeed-and-fertilizers.html
+++ b/cattlefeed-and-fertilizers.html
@@ -157,7 +157,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">At Bhagirath BVM Grand, we are committed to delivering top-quality cattle feed and
+            <p class="text-center regular-font">At Bhagirath BVM Grand, we are committed to delivering top-quality
+                cattle feed and
                 fertiliser products that empower agriculture and enhance livestock management. Our extensive portfolio
                 ensures that you have access to a wide range of options to meet your agricultural and livestock needs.
             </p>
@@ -167,7 +168,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-1.webp"
                     class="card-img-top" alt="RICE HUSK">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>RICE HUSK</h3>
                     <p>A cost-effective livestock feed choice.</p>
                     <ul>
@@ -183,7 +184,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-2.webp"
                     class="card-img-top" alt="YELLOW MAIZE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>YELLOW MAIZE</h3>
                     <p>Energy-packed staple for livestock diets.</p>
                     <ul>
@@ -199,7 +200,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-3.webp"
                     class="card-img-top" alt="SOYABEAN">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>SOYABEAN</h3>
                     <p>High-protein essential for cattle health.</p>
                     <ul>
@@ -215,7 +216,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-4.webp"
                     class="card-img-top" alt="NON GMO">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>NON GMO</h3>
                     <p>Ensuring safety and purity.</p>
                     <ul>
@@ -231,7 +232,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-5.webp"
                     class="card-img-top" alt="RAW MATERIALS & OTHER FEEDS">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>RAW MATERIALS & OTHER FEEDS</h3>
                     <p>Diverse feeds for agriculture and livestock nutrition.</p>
                     <ul>
@@ -247,7 +248,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-6.webp"
                     class="card-img-top" alt="VERMI COMPOST">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>VERMI COMPOST</h3>
                     <p>Organic fertiliser enriches soil fertility.</p>
                     <ul>
@@ -263,7 +264,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-7.webp"
                     class="card-img-top" alt="UREA N46 - GRANULAR PRILLED">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>UREA N46 - GRANULAR PRILLED</h3>
                     <p>Reliable nitrogen source for plants.</p>
                     <ul>
@@ -279,7 +280,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-8.webp"
                     class="card-img-top" alt="DAP & MAP">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>DAP & MAP</h3>
                     <p>Phosphorus-rich fertilisers for robust roots.</p>
                     <ul>
@@ -295,7 +296,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-9.webp"
                     class="card-img-top" alt="COMPLEX & SOLUABLE FERTILIZERS">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>COMPLEX & SOLUABLE FERTILIZERS</h3>
                     <p>Tailored blends for crop needs.</p>
                     <ul>
@@ -311,7 +312,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-10.webp"
                     class="card-img-top" alt="POTASH & NPK">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>POTASH & NPK</h3>
                     <p>Balanced nutrients for plant vitality.</p>
                     <ul>
@@ -327,7 +328,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-11.webp"
                     class="card-img-top" alt="BIO NPK & BIO DAP">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>BIO NPK & BIO DAP</h3>
                     <p>Sustainable solutions for agriculture.</p>
                     <ul>
@@ -343,7 +344,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-12.webp"
                     class="card-img-top" alt="BIO PROM">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>BIO PROM</h3>
                     <p>Innovative crop productivity boosters.</p>
                     <ul>
@@ -359,7 +360,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-13.webp"
                     class="card-img-top" alt="UREA GAS / LIQUID">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>UREA GAS / LIQUID</h3>
                     <p>Versatile nitrogen fertilisers for various applications.</p>
                     <ul>
