--- a/chemicals.html
+++ b/chemicals.html
@@ -152,7 +152,7 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
+            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to meet
                 your
                 global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
                 pulses,
