--- a/minerals-and-ores.html
+++ b/minerals-and-ores.html
@@ -157,7 +157,7 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">Welcome to Bhagirath BVM Grand's Minerals & Ores selection. We are the driving force
+            <p class="text-center regular-font">Welcome to Bhagirath BVM Grand's Minerals & Ores selection. We are the driving force
                 behind global trade, connecting nations and industries. With products including Ferro Chrome, Iron Ore,
                 Coal, Chrome Concentrate, Bauxite, Calamine, Manganese, and Lithium, we're your reliable source for raw
                 materials. Trust us to open doors to a world of trade opportunities.
@@ -168,7 +168,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-1.webp"
                     class="card-img-top" alt="FERRO CROME">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>FERRO CROME</h3>
                     <p>Chromium and iron alloy widely used in stainless steel production.</p>
                     <ul>
@@ -184,7 +184,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-2.webp"
                     class="card-img-top" alt="IRON ORE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>IRON ORE</h3>
                     <p>Raw material in steelmaking, consisting of iron oxides extracted from mines.</p>
                     <ul>
@@ -200,7 +200,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-3.webp"
                     class="card-img-top" alt="COAL">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>COAL</h3>
                     <p>Fossil fuel essential for electricity generation and industrial processes.</p>
                     <ul>
@@ -216,7 +216,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-4.webp"
                     class="card-img-top" alt="CROME CONCENTRATE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>CROME CONCENTRATE</h3>
                     <p>High-chromium material crucial for making alloys and chemicals.</p>
                     <ul>
@@ -232,7 +232,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-5.webp"
                     class="card-img-top" alt="BAUXITE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>BAUXITE</h3>
                     <p>Primary source of aluminium metal production, derived from aluminium oxide ores.</p>
                     <ul>
@@ -248,7 +248,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-6.webp"
                     class="card-img-top" alt="CALAMINE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>CALAMINE</h3>
                     <p>Mineral primarily composed of zinc carbonate, utilised in pharmaceutical products.</p>
                     <ul>
@@ -264,7 +264,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-7.webp"
                     class="card-img-top" alt="MANGANESE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>MANGANESE</h3>
                     <p>An element in steel production, improving its strength and durability.</p>
                     <ul>
@@ -280,7 +280,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-8.webp"
                     class="card-img-top" alt="LITHIUM">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>LITHIUM</h3>
                     <p>A lightweight metal critical for batteries in electronics and electric vehicles.</p>
                     <ul>
