--- a/our-services.html
+++ b/our-services.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="assets/css/home.css">
   <link rel="stylesheet" href="assets/css/our-services.css">
-  <!-- <link rel="stylesheet" href="assets/css/career.css"> -->
-  <!-- <link rel="stylesheet" href="assets/css/about.css"> -->
-  <!-- <link rel="stylesheet" href="assets/css/our_company.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- font awosome link  -->
@@ -95,14 +92,6 @@
   <!-- CAROUSEL -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/our-services-icon-img/hero-services-section-img/Rectangle 29 (2).webp"
@@ -264,114 +253,13 @@
     </div>
   </section>
 
-  <!-- CLIENT'S SUCCESS STORIES - NO CAROUSEL -->
-
-  <!-- <section class="client-success-stories">
-    <div class="container">
-      <div class="client-top-text">
-        <h2>CLIENT'S SUCCESS STORIES</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 gap-lg-5">
-          <div class="client-img">
-            <img src="assets/images/our-services-icon-img/CLIENT-SUCCESS-STORIES/Rectangle 57.webp" class="img-fluid"
-              alt="client image">
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mt-md-5">
-          <div class="client-success-stories-text">
-            <h2>Simran Kaur</h2>
-            <p class="c-s-p-text">HR & manager</p>
-            <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and dedication
-              ensure seamless transactions and superior product quality.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- CLIENT'S SUCCESS STORIES - CUSTOM CAROUSEL -->
-
-  <!-- <section class="custom-client-success-stories">
-    <div class="custom-container">
-      <div class="custom-client-top-text">
-        <h2>CLIENT'S SUCCESS STORIES</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
-      </div>
-      <div class="custom-carousel">
-        <div class="custom-carousel-inner">
-          <div class="custom-carousel-item active">
-            <div class="custom-row">
-              <div class="custom-col-img">
-                <div class="custom-client-img">
-                  <img src="assets/images/our-services-icon-img/CLIENT-SUCCESS-STORIES/Rectangle 57.webp"
-                    class="img-fluid" alt="client image">
-                </div>
-              </div>
-              <div class="custom-col-text">
-                <div class="custom-client-success-stories-text">
-                  <h2>Simran Kaur</h2>
-                  <p class="custom-c-s-p-text">HR & Manager</p>
-                  <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
-                    dedication ensure seamless transactions and superior product quality.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="custom-carousel-item">
-            <div class="custom-row">
-              <div class="custom-col-img">
-                <div class="custom-client-img">
-                  <img src="assets/images/our-services-icon-img/CLIENT-SUCCESS-STORIES/Rectangle 57.webp"
-                    class="img-fluid" alt="client image">
-                </div>
-              </div>
-              <div class="custom-col-text">
-                <div class="custom-client-success-stories-text">
-                  <h2>Simran Kaur 2</h2>
-                  <p class="custom-c-s-p-text">HR & Manager 2</p>
-                  <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
-                    dedication ensure seamless transactions and superior product quality.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="custom-carousel-item">
-            <div class="custom-row">
-              <div class="custom-col-img">
-                <div class="custom-client-img">
-                  <img src="assets/images/our-services-icon-img/CLIENT-SUCCESS-STORIES/Rectangle 57.webp"
-                    class="img-fluid" alt="client image">
-                </div>
-              </div>
-              <div class="custom-col-text">
-                <div class="custom-client-success-stories-text">
-                  <h2>Simran Kaur 3</h2>
-                  <p class="custom-c-s-p-text">HR & Manager 3</p>
-                  <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
-                    dedication ensure seamless transactions and superior product quality.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="custom-carousel-indicators">
-          <span class="custom-indicator active" data-slide="0"></span>
-          <span class="custom-indicator" data-slide="1"></span>
-          <span class="custom-indicator" data-slide="2"></span>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <!-- CLIENT'S SUCCESS STORIES - BOOTSTRAP -->
 
   <section class="client-success-stories">
     <div class="container">
       <div class="client-top-text">
         <h2>CLIENT'S SUCCESS STORIES</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
       </div>
       <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"
         data-bs-pause="false">
@@ -389,7 +277,7 @@
                   <div class="client-success-stories-text">
                     <h2>Simran Kaur</h2>
                     <p class="c-s-p-text">HR & manager</p>
-                    <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
+                    <p class="regular-font">Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
                       dedication
                       ensure seamless transactions and superior product quality.</p>
                   </div>
@@ -410,7 +298,7 @@
                   <div class="client-success-stories-text">
                     <h2>Simran Kaur</h2>
                     <p class="c-s-p-text">HR & manager</p>
-                    <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
+                    <p class="regular-font">Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
                       dedication
                       ensure seamless transactions and superior product quality.</p>
                   </div>
@@ -431,7 +319,7 @@
                   <div class="client-success-stories-text">
                     <h2>Simran Kaur</h2>
                     <p class="c-s-p-text">HR & manager</p>
-                    <p>Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
+                    <p class="regular-font">Bhagirath BVM Grand (HK) exceeds expectations in trading goods. Their professionalism and
                       dedication
                       ensure seamless transactions and superior product quality.</p>
                   </div>
@@ -454,114 +342,24 @@
 
   <!-- FAQ SECTION -->
 
-  <!-- <section class="faq">
-    <div class="container">
-      <div class="text-center pt-5">
-        <H2>FREQUENTLY ASKED QUESTIONS</H2>
-        <P class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
-      </div>
-      <div class="faq-con-img d-flex">
-        <div class="container rounded h-75 w-75 m-5 text-light">
-          <div class="accordion pb-4" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
-                  What is BVM Grand's role in global trade?
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  What is BVM Grand's role in global trade?
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                  What is BVM Grand's role in global trade?
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
-                  What is BVM Grand's role in global trade?
-                </button>
-              </h2>
-              <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
-                  What is BVM Grand's role in global trade?
-                </button>
-              </h2>
-              <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="faq-img">
-          <img src="assets/images/our-services-icon-img/FAQ-IMG/Group 93.webp" alt="FAQ image" height="300px">
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- FAQ SECTION (NEW) -->
-
   <section class="faq pb-5">
     <div class="container">
       <div class="text-center pt-5">
         <H2>FREQUENTLY ASKED QUESTIONS</H2>
-        <P class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
+        <P class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
       </div>
       <div class="faq-con-img d-flex">
         <div class="container h-75 w-md-75 text-light">
           <div class="accordion faq-container p-4" id="accordionExample">
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
@@ -569,13 +367,13 @@
             </div>
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
@@ -583,13 +381,13 @@
             </div>
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
@@ -597,13 +395,13 @@
             </div>
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
@@ -611,13 +409,13 @@
             </div>
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
@@ -625,13 +423,13 @@
             </div>
             <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseTwo">
                   What is BVM Grand's role in global trade?
                 </button>
               </h2>
               <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <div class="accordion-body regular-font">
                   <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
