--- a/products.html
+++ b/products.html
@@ -142,8 +142,8 @@
     <div class="container pt-4">
 
       <div class="product-top-content text-center pb-3">
-        <h2>PRODUCTS WE SERVES</h2>
-        <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet your
+        <h2>PRODUCTS WE SERVE</h2>
+        <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to meet your
           global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
           our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
           yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.
@@ -155,7 +155,7 @@
 
         <div class="card-product col-12 col-md-6 col-lg-6">
           <img src="assets/images/product-page/product-services-img/rice.webp" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>RICE</h3>
             <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary diversity.
             </p>
@@ -171,7 +171,7 @@
 
         <div class="card-product col-12 col-md-6 col-lg-6 ">
           <img src="assets/images/product-page/product-services-img/soyabean.webp" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>SOYABEANS</h3>
             <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed,
               and oil production.</p>
@@ -190,7 +190,7 @@
       <div class="row col-12">
         <div class="card-product col-12 col-md-6 col-lg-6">
           <img src="assets/images/product-page/product-services-img/wheat.webp" class="card-img-top" alt="WHEAT">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>WHEAT</h3>
             <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
               climates..</p>
@@ -205,7 +205,7 @@
         </div>
         <div class="card-product col-12 col-md-6 col-lg-6 ">
           <img src="assets/images/product-page/product-services-img/sugar.webp" class="card-img-top" alt="SUGAR">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>SUGAR</h3>
             <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food
               processing and confectionery..</p>
@@ -223,7 +223,7 @@
       <div class="row col-12">
         <div class="card-product col-12 col-md-6 col-lg-6">
           <img src="assets/images/product-page/product-services-img/dal.webp" class="card-img-top" alt="DAL AND PULSES">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>DAL AND PULSES</h3>
             <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans..</p>
             <ul>
@@ -238,7 +238,7 @@
         <div class="card-product col-12 col-md-6 col-lg-6 ">
           <img src="assets/images/product-page/product-services-img/yellow-maize.webp" class="card-img-top"
             alt="YELLOW MAIZE">
-          <div class="card-body">
+          <div class="card-body regular-font">
             <h3>YELLOW MAIZE</h3>
             <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food
               processing and confectionery.</p>
