--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -94,14 +94,6 @@
     <!-- CAROUSEL -->
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-        <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
                 <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-1.webp"
@@ -148,7 +140,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
+            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw
+                materials to meet
                 your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
                 and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
                 high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
@@ -157,32 +150,10 @@
         </div>
         <div class="row">
             <!-- 1st Card -->
-            <!-- <div class="col-md-6 d-flex align-items-start">
-                <div class="connecting-box"></div>
-                <div class="card-product p-4">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
-                        class="card-img-top" alt="Rice">
-                    <div class="card-body">
-                        <h3>RICE</h3>
-                        <p>A Versatile staple food or billions globally, cherished for its nutritional value and
-                            culinary
-                            diversity.</p>
-                        <ul>
-                            <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
-                            <li>Varieties include long-grain, short-grain, and basmati, which offer distinct qualities.
-                            </li>
-                            <li>Leading rice producers: China, India, Indonesia.</li>
-                            <li>A versatile ingredient from sushi to risotto.</li>
-                            <li>Vital global food security and agriculture.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div> -->
-            <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
                     class="card-img-top" alt="Rice">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>RICE</h3>
                     <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary
                         diversity.</p>
@@ -199,7 +170,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-2.webp"
                     class="card-img-top" alt="Soyabeans">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>SOYABEANS</h3>
                     <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
                         animal feed, and oil production.</p>
@@ -216,7 +187,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-3.webp"
                     class="card-img-top" alt="Wheat">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>WHEAT</h3>
                     <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
                         climates.</p>
@@ -233,7 +204,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
                     class="card-img-top" alt="Sugar">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>SUGAR</h3>
                     <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
                         in food processing and confectionery.</p>
@@ -250,7 +221,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-5.webp"
                     class="card-img-top" alt="Dal and pulses">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>DAL AND PULSES</h3>
                     <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans.
                     </p>
@@ -267,7 +238,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
                     class="card-img-top" alt="Yellow maize">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>YELLOW MAIZE</h3>
                     <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
                         in food processing and confectionery.</p>
