--- a/biofuels.html
+++ b/biofuels.html
@@ -149,7 +149,7 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
+            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to meet
                 your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
                 and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
                 high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
@@ -161,7 +161,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/biofuels/card-img/biofuels-card-img-1.webp" class="card-img-top"
                     alt="BIO DIESEL">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>BIO DIESEL</h3>
                     <p>BioDiesel is a renewable diesel fuel made from organic materials.</p>
                     <ul>
@@ -177,7 +177,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.webp" class="card-img-top"
                     alt="ETHANOL">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>ETHANOL</h3>
                     <p>Ethanol is an alcohol-based biofuel primarily derived from corn or sugarcane.</p>
                     <ul>
@@ -193,7 +193,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.webp" class="card-img-top"
                     alt="BIO LNG">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>BIO LNG</h3>
                     <p>Bio LNG is a renewable form of liquefied natural gas made from organic matter.</p>
                     <ul>
@@ -209,7 +209,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/biofuels/card-img/biofuels-card-img-4.webp" class="card-img-top"
                     alt="FATTY ACIDS AND STERNE">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>FATTY ACIDS AND STERNE</h3>
                     <p>Fatty Acids & Sterne are renewable bio-based materials used in various industries.</p>
                     <ul>
@@ -225,7 +225,7 @@
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/biofuels/card-img/biofuels-card-img-5.webp" class="card-img-top"
                     alt="PALM OIL AND USED COOKING OIL">
-                <div class="card-body">
+                <div class="card-body regular-font">
                     <h3>PALM OIL AND USED COOKING OIL</h3>
                     <p>Palm Oil and Used Cooking Oil are sustainable sources for biofuel production.</p>
                     <ul>
