--- a/career.html
+++ b/career.html
@@ -7,9 +7,7 @@
   <title>Bhagirath Industries</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="assets/css/home.css">
-  <!-- <link rel="stylesheet" href="assets/css/about.css"> -->
   <link rel="stylesheet" href="assets/css/career.css">
-  <!-- <link rel="stylesheet" href="assets/css/our-company.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- font awosome link  -->
@@ -93,14 +91,6 @@
   <!-- CAROUSEL -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/career page/hero-section-img/career-hero-img-2.webp" class="d-block w-100" alt="...">
@@ -118,14 +108,6 @@
             you can trust that the quality is always up to standard.</p>
         </div>
       </div>
-      <!-- <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/career page/hero-section-img/career-hero-img-1.webp" class="d-block w-100" alt="...">
-        <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
-        </div>
-      </div> -->
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -181,11 +163,11 @@
 
   <section class="job-openings px-2 pb-5">
     <h2 class="text-center">Job Openings</h2>
-    <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+    <p class="text-center regular-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
     <div class="container pt-4">
       <div class="row">
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card" data-title="Back-end Developer" data-location="Bhopal"
+        <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Bhopal"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Node.js Developer</div>
@@ -203,7 +185,7 @@
           </div>
         </div>
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card" data-title="Front-end Developer" data-location="Noida"
+        <div class="col-md-4 mb-4 job-card regular-font" data-title="Front-end Developer" data-location="Noida"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">React Developer</div>
@@ -221,7 +203,7 @@
           </div>
         </div>
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card" data-title="Content Writer" data-location="Bhopal" data-category="Writer">
+        <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Bhopal" data-category="Writer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Content Writer</div>
             <hr class="card-line">
@@ -237,7 +219,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4 job-card" data-title="Content Writer" data-location="Noida" data-category="Writer">
+        <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Noida" data-category="Writer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Junior Content Writer</div>
             <hr class="card-line">
@@ -253,7 +235,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4 job-card" data-title="Back-end Developer" data-location="Noida"
+        <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Noida"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Java Developer</div>
@@ -283,7 +265,7 @@
     <div class="container">
       <div class="quick-top-content text-start pt-5">
         <h2>Quick Apply</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
       </div>
       <form id="jobApplicationForm" enctype="multipart/form-data">
         <div class="row pt-5">
