--- a/contact-us.html
+++ b/contact-us.html
@@ -92,14 +92,6 @@
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"
     data-bs-pause="false">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/contact-us-img/hero-section/contact-us-hero-img-1.webp" class="d-block w-100" alt="...">
@@ -147,79 +139,40 @@
     </div>
   </section>
 
-  <!-- INFORMATION OF CONTACT -->
+  <!-- CONTACT US -->
 
   <section>
     <div class="container">
       <div class="top-contact-us-contnet text-center pb-5">
         <h2>CONTACT US</h2>
-        <p>Contact us today to discover the world of possibilities waiting for you. More exciting things that you are
+        <p class="regular-font">Contact us today to discover the world of possibilities waiting for you. More exciting things that you are
           looking for. Just a click and we will contact you. Make an effort and enjoy all the global trading sources. We
           are inviting you to join our trading method and explore various diverse services that can help you for your
           personal services.looking for. Just a click and we will contact you.</p>
-
       </div>
 
       <div class="row">
         <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
           <img src="assets/images/contact-us-img/icon/Vector (2).webp" alt="location" class="pb-3">
-          <p class="text-center">Address</p>
-          <p class="text-center">402 Luxuria Business Hub, Near VR Mall
+          <p class="text-center regular-font">Address</p>
+          <p class="text-center regular-font">402 Luxuria Business Hub, Near VR Mall
             Udhana Magdalla Road, Surat - Dumas Road,
             Surat Gujarat - 395007 INDIA</p>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
           <img src="assets/images/contact-us-img/icon/Vector (1) (1).webp" alt="phone" class="pb-3">
-          <p class="text-center">Phone Number</p>
-          <p class="text-center">Tel - 85239195807</p>
-          <p class="text-center">Fax - 85239195837</p>
+          <p class="text-center regular-font">Phone Number</p>
+          <p class="text-center regular-font">Tel - 85239195807</p>
+          <p class="text-center regular-font">Fax - 85239195837</p>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
           <img src="assets/images/contact-us-img/icon/Group 107.webp" alt="mail " class="pb-3">
-          <p class="text-center">Email</p>
-          <p class="text-center">info@bhagirathindustries.com</p>
+          <p class="text-center regular-font">Email</p>
+          <p class="text-center regular-font">info@bhagirathindustries.com</p>
         </div>
       </div>
     </div>
   </section>
-
-
-  <!-- QUERY SECTION (OLD) -->
-
-  <!-- <section class="query">
-    <div class="container">
-      <div class="query-top-content pt-5">
-        <h2>
-          Query
-        </h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
-      </div>
-      <div class="row pt-3 col-12">
-        <div class="col-6 col-md-6 col-lg-3 pb-3 w-50">
-          <label for="full-name" class="form-label">Full Name</label>
-          <input type="text" id="full-name" class="form-control bg-body-secondary" placeholder="Enter Full Name"
-            required>
-        </div>
-        <div class="col-6 col-md-6 col-lg-3 pb-3 w-50">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" id="email" class="form-control bg-body-secondary" placeholder="Enter Email" required>
-        </div>
-      </div>
-      <div class="row pt-3 col-12">
-        <div class="col-6 col-md-6 col-lg-3 pb-3 w-100">
-          <label for="your-query" class="form-label">Your Query</label>
-          <input type="text" id="your-query" class="form-control bg-body-secondary w-100" placeholder="Enter Query"
-            required>
-        </div>
-        <div class="pt-3 mb-3">
-          <label for="description" class="form-label">Description</label>
-          <textarea class="form-control w-100" id="description" rows="3" placeholder="Enter description"></textarea>
-        </div>
-        <div class="pt-3 d-flex justify-content-center pb-5">
-          <button class="btn-quick btn-orange" type="submit">Submit</button>
-        </div>
-      </div>
-  </section> -->
 
   <!-- QUERY SECTION (NEW) -->
 
@@ -229,7 +182,7 @@
         <h2>
           Submit a Query
         </h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
       </div>
 
       <form id="contactForm">
