--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -94,14 +94,6 @@
   <!-- CAROUSEL -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-1.webp" class="d-block w-100"
@@ -146,7 +138,8 @@
   <div class="container pt-4">
     <div class="product-top-content text-center pb-3">
       <h2>PRODUCTS WE SERVE</h2>
-      <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet your
+      <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to
+        meet your
         global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
         our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
         yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.
@@ -157,7 +150,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
           alt="GROUNDNUT OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>GROUNDNUT OIL</h3>
           <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
           <ul>
@@ -172,7 +165,7 @@
       <!-- 2nd Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top" alt="SOYABEANS">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>SOYABEANS</h3>
           <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed,
             and oil production.</p>
@@ -188,7 +181,7 @@
       <!-- 3rd Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top" alt="CASTOR OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>CASTOR OIL</h3>
           <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
           <ul>
@@ -204,7 +197,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
           alt="SUNFLOWER OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>SUNFLOWER OIL</h3>
           <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
           <ul>
@@ -220,7 +213,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
           alt="MUSTARD OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>MUSTARD OIL</h3>
           <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
           <ul>
@@ -235,7 +228,7 @@
       <!-- 6th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top" alt="PALM OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>PALM OIL</h3>
           <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
           <ul>
@@ -249,128 +242,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <hr> -->
-
-  <!-- PRODUCTS WE SERVE (OLD) -->
-
-  <!-- <section class="products-we-serve">
-    <div class="container pt-4">
-      <div class="product-top-content text-center pb-3">
-        <h2>PRODUCTS WE SERVE</h2>
-        <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet your
-          global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
-          our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
-          yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.
-        </p>
-      </div> -->
-
-  <!-- 1st row  -->
-
-  <!-- <div class="row col-12 card-serve">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
-            alt="GROUNDNUT OIL">
-          <div class="card-body">
-            <h3>GROUNDNUT OIL</h3>
-            <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
-            <ul>
-              <li>Rich, nutty flavour enhances various cuisines.</li>
-              <li>High smoke point makes it suitable for frying.</li>
-              <li>Contains heart-healthy monounsaturated fats.</li>
-              <li>Source of vitamin E, an antioxidant.</li>
-              <li>Commonly used in Asian and African cooking.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top" alt="SOYABEANS">
-          <div class="card-body">
-            <h3>SOYABEANS</h3>
-            <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed,
-              and oil production.</p>
-            <ul>
-              <li>Soybeans: major plant-based protein and oil source.</li>
-              <li>Used in tofu, soy milk, and soybean oil.</li>
-              <li>Essential for animal feed and biodiesel.</li>
-              <li>Top producers: U.S., Brazil, Argentina.</li>
-              <li>Gaining popularity for health benefits and sustainability.</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-
-  <!-- 2nd row  -->
-
-  <!-- <div class="row col-12">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top"
-            alt="CASTOR OIL">
-          <div class="card-body">
-            <h3>CASTOR OIL</h3>
-            <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
-            <ul>
-              <li>Derived from castor beans and used for medicinal purposes.</li>
-              <li>Known for its laxative properties.</li>
-              <li>Also used in cosmetics and industrial applications.</li>
-              <li>Contains ricinoleic acid with potential health benefits.</li>
-              <li>Should be used cautiously due to its potency.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
-            alt="SUNFLOWER OIL">
-          <div class="card-body">
-            <h3>SUNFLOWER OIL</h3>
-            <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
-            <ul>
-              <li>Neutral taste and high smoke point make it versatile.</li>
-              <li>Low in saturated fats and rich in vitamin E.</li>
-              <li>Popular for frying, sautéing, and salad dressings.</li>
-              <li>Supports heart health and may reduce inflammation.</li>
-              <li>Commonly used in Eastern European and Mediterranean cuisines.</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-
-  <!-- 3rd row -->
-
-  <!-- <div class="row col-12">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
-            alt="MUSTARD OIL">
-          <div class="card-body">
-            <h3>MUSTARD OIL</h3>
-            <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
-            <ul>
-              <li>Pungent flavour adds unique taste to dishes.</li>
-              <li>Used extensively in Indian and Southeast Asian cooking.</li>
-              <li>High smoking point makes it suitable for deep frying.</li>
-              <li>Contains omega-3 and omega-6 fatty acids.</li>
-              <li>Can be milder when heated for a shorter time.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top" alt="PALM OIL">
-          <div class="card-body">
-            <h3>PALM OIL</h3>
-            <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
-            <ul>
-              <li>Versatile and widely used in the food industry.</li>
-              <li>Used in various processed products like margarine and snacks.</li>
-              <li>Controversial due to environmental concerns in palm oil production.</li>
-              <li>High in saturated fats but also contains beneficial components.</li>
-              <li>Rich in antioxidants like vitamin E and carotenoids.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
 
   <!-- FOOTER -->
 
