--- a/our-company.html
+++ b/our-company.html
@@ -143,49 +143,30 @@
     </button>
   </div>
 
-  <!-- NEW CAROUSEL -->
-  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 29.webp" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 48.webp" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/our-company-page/hero-section/Rectangle 49.webp" class="d-block w-100" alt="...">
-      </div>
-    </div>
-  </div> -->
-
-  <!-- make a Strategic Business Proposition -->
+  <!-- Strategic Business Proposition -->
   <section class="Strategic-Business-Proposition pt-5">
 
     <div class="container">
       <div class="heading-Strategic-Business-Proposition text-center pt-3">
         <h2>Strategic Business Proposition</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+        <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
       </div>
 
       <div class="row d-flex align-items-center pb-5 stratagic-content">
-        <div class="col-md-8 content-stratgic-p text-start">
+        <div class="col-md-8 content-stratgic-p text-start regular-font">
           <p>We play a pivotal role in Agri-value chains i.e. sourcing raw materials and transforming them to
             deliver food, feed and fibre to the world.
             Consumer preferences for food and ingredients are rapidly evolving with greater emphasis on
             health & nutritional value, clean labelling, authenticity, supply chain visibility, and
             sustainability.
           </p>
-          <p>These preferences are driving a rethink towards products that are „right-for-me‟,
-            „right-for-the-planet‟, & „right-for-producers‟.</p>
+          <p>These preferences are driving a rethink towards products that are "right-for-me",
+            "right-for-the-planet", & "right-for-producers".</p>
           <a href="#" class="text-dark">We keep refreshing our strategies to meet this changing consumer
             landscape by continuing to:</a>
-
-          <!-- <ul> -->
           <li>Invest in our capabilities to enhance our leadership position</li>
           <li>Invest & capitalise on the key emerging trends of health & wellness, traceability &
             sustainability.</li>
-          <!-- </ul> -->
-
           <p>We are focused on furthering our leadership in our chosen businesses and creating greater value
             for our shareholders, customers, suppliers, employees & partners.</p>
         </div>
@@ -194,20 +175,18 @@
             alt="Strategic Business" class="img-fluid-Strategic-Business-Proposition img-fluid">
         </div>
       </div>
-
-    </div>
-
     </div>
   </section>
 
-  <!-- make a Vertically Integrated Business Model -->
+  <!-- Vertically Integrated Business Model -->
   <section class="Vertically-Integrated-Business-Model pt-5">
     <div class="container">
       <div class="row d-flex align-items-center pb-5">
         <div class="Vertically-Integrated-contnet col-md-7">
           <h2>Vertically Integrated Business Model</h2>
-          <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
-          <p>Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum fringilla eleifend eu cras
+          <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+          <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum fringilla
+            eleifend eu cras
             et amet. Eu non mi accumsan lacus enim. Nullam nam odio gravida nulla turpis tempor sit
             tristique. Eget luctus neque sapien accumsan dui ac mauris lobortis elit. Lorem ipsum dolor sit
             amet consectetur. Donec quis vitae condimentum fringilla eleifend eu cras et amet. Eu non mi
@@ -218,48 +197,37 @@
             sapien accumsan dui ac mauris lobortis elit. Lorem ipsum dolor sit amet consectetur. Donec quis
             vitae condimentum fringilla eleifend eu cras et amet. </p>
         </div>
-
-
         <div class="col-md-5">
           <img src="assets/images/our-company-page/Vertically Integrated Business Model/image 15 (1).webp" alt=""
             class="vertical-img img-fluid">
         </div>
-
       </div>
     </div>
-
   </section>
 
-  <!-- make a our team section  -->
+  <!-- OUR TEAM -->
 
   <section class="our-team pt-5">
     <div class="container">
-
       <div class="our-team-content text-center">
         <h2>Our Team</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+        <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
       </div>
-
-      <!-- make a slider  -->
+      <!-- SLIDER -->
       <div class="slider-wrapper">
-
         <ul class="image-list">
           <img class="image-item" src="assets/images/our-company-page/our team/Frame 90.webp" alt="img-1" />
           <img class="image-item" src="assets/images/our-company-page/our team/Frame 91.webp" alt="img-2" />
           <img class="image-item" src="assets/images/our-company-page/our team/Rectangle 18 (1).webp" alt="img-3" />
           <img class="image-item" src="assets/images/our-company-page/our team/Rectangle 19.webp" alt="img-4" />
-
         </ul>
-
       </div>
       <div class="slider-scrollbar">
         <div class="scrollbar-track">
           <div class="scrollbar-thumb"></div>
         </div>
       </div>
-
     </div>
-
   </section>
 
   <!-- OUR BUSINESSES -->
@@ -268,7 +236,7 @@
     <div class="container">
       <div class="our-business-top-content text-center">
         <h2>Our Businessess</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+        <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
       </div>
       <div class="row pb-1">
         <div class="col-md-4 mb-1">
@@ -277,7 +245,7 @@
               <img src="assets/images/our-company-page/our business icon/Group.png" alt="">
             </div>
             <h5>Food & Agri Business</h5>
-            <p>We're your reliable source for a wide range of products sourced from around the world. Count on us to
+            <p class="regular-font">We're your reliable source for a wide range of products sourced from around the world. Count on us to
               find the finest products that meet your specifications.</p>
           </div>
         </div>
@@ -287,7 +255,7 @@
               <img src="assets/images/our-company-page/our business icon/Group (1).png" alt="">
             </div>
             <h5>Oil & Refineries Pvt. Ltd.</h5>
-            <p>From cargo handling to global shipping solutions, we streamline the logistics process. Your products will
+            <p class="regular-font">From cargo handling to global shipping solutions, we streamline the logistics process. Your products will
               reach their destination safely and on time..</p>
           </div>
         </div>
@@ -298,7 +266,7 @@
                 alt="">
             </div>
             <h5>Food & Beverages</h5>
-            <p>Quality is our hallmark. We rigorously inspect and verify products to ensure they meet the highest
+            <p class="regular-font">Quality is our hallmark. We rigorously inspect and verify products to ensure they meet the highest
               standards, so you can have complete confidence in what you receive..</p>
           </div>
         </div>
@@ -310,7 +278,7 @@
               <img src="assets/images/our-company-page/our business icon/mdi_water-outline.webp" alt="">
             </div>
             <h5>Carpe Industrial Systems Pvt. Ltd.</h5>
-            <p>We understand that one size doesn't fit all. Our team tailors solutions to meet your specific needs,
+            <p class="regular-font">We understand that one size doesn't fit all. Our team tailors solutions to meet your specific needs,
               ensuring a seamless and efficient experience.</p>
           </div>
         </div>
@@ -320,7 +288,7 @@
               <img src="assets/images/our-company-page/our business icon/Vector.webp" alt="">
             </div>
             <h5>Business Solution Division</h5>
-            <p>Whether you're a manufacturer looking to export or a business aiming to import, we open doors to global
+            <p class="regular-font">Whether you're a manufacturer looking to export or a business aiming to import, we open doors to global
               markets, expanding your reach and opportunities..</p>
           </div>
         </div>
@@ -330,7 +298,7 @@
               <img src="assets/images/our-company-page/our business icon/Vector (1).webp" alt="">
             </div>
             <h5>Capital & Venture Partner Division</h5>
-            <p>Our commitment doesn't end with a transaction. We provide exceptional customer support, ensuring your
+            <p class="regular-font">Our commitment doesn't end with a transaction. We provide exceptional customer support, ensuring your
               satisfaction and addressing your queries and concerns promptly.</p>
           </div>
         </div>
@@ -342,7 +310,7 @@
               <img src="assets/images/our-company-page/our business icon/Group (2).webp" alt="">
             </div>
             <h5>Petrochemical Division</h5>
-            <p>We understand that one size doesn't fit all. Our team tailors solutions to meet your specific needs,
+            <p class="regular-font">We understand that one size doesn't fit all. Our team tailors solutions to meet your specific needs,
               ensuring a seamless and efficient experience.</p>
           </div>
         </div>
@@ -352,7 +320,7 @@
               <img src="assets/images/our-company-page/our business icon/hugeicons_shipping-loading.webp" alt="">
             </div>
             <h5>Shipping & Logistics</h5>
-            <p>Whether you're a manufacturer looking to export or a business aiming to import, we open doors to global
+            <p class="regular-font">Whether you're a manufacturer looking to export or a business aiming to import, we open doors to global
               markets, expanding your reach and opportunities..</p>
           </div>
         </div>
