--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -94,14 +94,6 @@
   <!-- CAROUSEL -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 29 (6).webp" class="d-block w-100" alt="...">
@@ -146,7 +138,8 @@
   <div class="container pt-4">
     <div class="product-top-content text-center pb-3">
       <h2>PRODUCTS WE SERVE</h2>
-      <p class="text-center">At Bhagirath BVM Grand, we take immense pride in our expertise in the sourcing, supply,
+      <p class="text-center regular-font">At Bhagirath BVM Grand, we take immense pride in our expertise in the
+        sourcing, supply,
         and quality assurance of petroleum and fuel related products. With a strong commitment to excellence and
         reliability, we have become a trusted partner for businesses across the globe seeking to meet their energy
         needs and fuel the engines of industry and transportation.
@@ -157,7 +150,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/AVIATION FUEL.webp" class="card-img-top"
           alt="AVIATION FUEL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>AVIATION FUEL</h3>
           <p>Fueling the skies with high-octane precision.</p>
           <ul>
@@ -172,7 +165,7 @@
       <!-- 2nd Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/D2 GAS OIL.webp" class="card-img-top" alt="D2 GAS OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>D2 GAS OIL</h3>
           <p>Powering transportation and industries with efficiency.</p>
           <ul>
@@ -188,7 +181,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/D6 DIESEL FUEL (2).webp" class="card-img-top"
           alt="D6 DIESEL FUEL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>D6 DIESEL FUEL</h3>
           <p>Heavy-duty energy for industrial giants.</p>
           <ul>
@@ -204,7 +197,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/EN-590 DIESEL.webp" class="card-img-top"
           alt="EN-590 DIESEL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>EN-590 DIESEL</h3>
           <p>Setting the European standard for clean diesel.</p>
           <ul>
@@ -219,7 +212,7 @@
       <!-- 5th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/FUEL OIL.webp" class="card-img-top" alt="FUEL OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>FUEL OIL</h3>
           <p>From furnaces to generators, the backbone of industry.</p>
           <ul>
@@ -234,7 +227,7 @@
       <!-- 6th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/CRUDE OIL.webp" class="card-img-top" alt="CRUDE OIL">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>CRUDE OIL</h3>
           <p>The source of endless possibilities in refining.</p>
           <ul>
@@ -249,7 +242,7 @@
       <!-- 7th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/MAZUT.webp" class="card-img-top" alt="MAZUT">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>MAZUT</h3>
           <p>A heavyweight in the world of industrial fuels.</p>
           <ul>
@@ -265,7 +258,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED PETROLEUM GAS.webp" class="card-img-top"
           alt="LIQUIFIED PETROLEUM GAS">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>LIQUIFIED PETROLEUM GAS</h3>
           <p>Clean-burning energy for diverse applications.</p>
           <ul>
@@ -281,7 +274,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED NATURAL GAS.webp" class="card-img-top"
           alt="LIQUIFIED NATURAL GAS">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>LIQUIFIED NATURAL GAS</h3>
           <p>Unlocking the potential of natural gas in liquid form.</p>
           <ul>
@@ -297,7 +290,7 @@
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/PETROLEUM COKE.webp" class="card-img-top"
           alt="PETROLEUM COKE">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>PETROLEUM COKE</h3>
           <p>A versatile byproduct with industrial significance.</p>
           <ul>
@@ -312,7 +305,7 @@
       <!-- 11th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/NAPHTHA.webp" class="card-img-top" alt="NAPHTHA">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>NAPHTHA</h3>
           <p>The essential feedstock for the petrochemical industry.</p>
           <ul>
@@ -327,7 +320,7 @@
       <!-- 12th Card -->
       <div class="card-product col-md-6 p-4">
         <img src="assets/images/petroleum-oil-page/card-img/BITUMEN.webp" class="card-img-top" alt="BITUMEN">
-        <div class="card-body">
+        <div class="card-body regular-font">
           <h3>BITUMEN</h3>
           <p>Building roads and infrastructure, one layer at a time.</p>
           <ul>
@@ -342,149 +335,6 @@
     </div>
   </div>
 
-
-  <!-- maka a product we serve  -->
-  <!-- <section class="product-we-erve">
-    <div class="container pt-4">
-      <div class="product-top-content text-center pb-3">
-        <h2>PRODUCTS WE SERVES ***OLD***</h2>
-        <p class="text-center">At Bhagirath BVM Grand, we take immense pride in our expertise in the sourcing, supply,
-          and quality assurance of petroleum and fuel related products. With a strong commitment to excellence and
-          reliability, we have become a trusted partner for businesses across the globe seeking to meet their energy
-          needs and fuel the engines of industry and transportation..</p>
-      </div>
-      <div class="row col-12 card-serve d-flex align-items-md-center"> -->
-  <!-- <p class="align-items-md-center d-flex">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, totam.</p> -->
-  <!-- <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/petroleum-oil-page/card-img/AVIATION FUEL.webp" class="card-img-top"
-            alt="AVIATION FUEL">
-          <div class="card-body">
-            <h3>AVIATION FUEL</h3>
-            <p>Fueling the skies with high-octane precision..</p>
-            <ul>
-              <li>High octane for aircraft safety..</li>
-              <li>Precise formulation for engine performance...</li>
-              <li>Stringent quality standards for aviation...</li>
-              <li>Clean-burning to reduce emissions..</li>
-              <li>Vital for global air transportation..</li>
-            </ul>
-          </div>
-        </div> -->
-  <!-- <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/petroleum-oil-page/card-img/D2 GAS OIL.webp" class="card-img-top" alt="D2 GAS OIL">
-          <div class="card-body">
-            <h3>D2 GAS OIL</h3>
-            <p>Powering transportation and industries with efficiency..</p>
-            <ul>
-              <li>High energy density for efficiency..</li>
-              <li>Cold weather performance..</li>
-              <li>Versatile for various diesel engines.</li>
-              <li>Low sulphur options available..</li>
-              <li>Reliable power for transportation and industries..</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-  <!-- 2nd row  -->
-  <!-- <div class="row col-12">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/petroleum-oil-page/card-img/D6 DIESEL FUEL (2).webp" class="card-img-top"
-            alt="D6 DIESEL FUEL">
-          <div class="card-body">
-            <h3>D6 DIESEL FUEL</h3>
-            <p>Heavy-duty energy for industrial giants.</p>
-            <ul>
-              <li>Heavier for industrial applications.</li>
-              <li>Common in power generation..</li>
-              <li>May require emissions controls.</li>
-              <li>Efficient for heavy-duty equipment.</li>
-              <li>Robust energy source for industrial giants. .</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/petroleum-oil-page/card-img/EN-590 DIESEL.webp" class="card-img-top"
-            alt="EN-590 DIESEL">
-          <div class="card-body">
-            <h3>EN-590 DIESEL</h3>
-            <p>Setting the European standard for clean diesel..</p>
-            <ul>
-              <li>European standard for clean diesel...</li>
-              <li>Low sulfur and emissions compliant...</li>
-              <li>Widely used in Europe..</li>
-              <li>Winter and summer grades available...</li>
-              <li>Powering vehicles and machinery in Europe..</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-  <!-- 3rd row -->
-  <!-- <div class="row col-12">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/petroleum-oil-page/card-img/FUEL OIL.webp" class="card-img-top" alt="FUEL OIL">
-          <div class="card-body">
-            <h3>FUEL OIL</h3>
-            <p>From furnaces to generators, the backbone of industry..</p>
-            <ul>
-              <li>Heavy and viscous for industry..</li>
-              <li>Different grades for various uses.</li>
-              <li>Used in global power generation..</li>
-              <li>Environmental challenges due to sulphur..</li>
-              <li>Residual and distillate types available..</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/petroleum-oil-page/card-img/CRUDE OIL.webp" class="card-img-top" alt="CRUDE OIL">
-          <div class="card-body">
-            <h3>CRUDE OIL</h3>
-            <p>The source of endless possibilities in refining..</p>
-            <ul>
-              <li>Source of diverse refined products..</li>
-              <li>Basis for petrochemicals..</li>
-              <li>Crucial in global energy supply..</li>
-              <li>Refined into fuels and chemicals.</li>
-              <li>Drives the petroleum industry..</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-  <!-- 4th row  -->
-  <!-- <div class="row col-12">
-        <div class="card-product col-12 col-md-6 col-lg-6">
-          <img src="assets/images/petroleum-oil-page/card-img/MAZUT.webp" class="card-img-top" alt="MAZUT">
-          <div class="card-body">
-            <h3>MAZUT</h3>
-            <p>A heavyweight in the world of industrial fuels..</p>
-            <ul>
-              <li>Heavy industrial fuel.</li>
-              <li>Used in power generation.</li>
-              <li>Diverse industrial applications.</li>
-              <li>Lower grade than diesel..</li>
-              <li>Valuable in heavy industry..</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card-product col-12 col-md-6 col-lg-6 ">
-          <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED PETROLEUM GAS.webp" class="card-img-top"
-            alt="LIQUIFIED PETROLEUM GAS">
-          <div class="card-body">
-            <h3>LIQUIFIED PETROLEUM GAS</h3>
-            <p>Clean-burning energy for diverse applications..</p>
-            <ul>
-              <li>Clean-burning energy source.</li>
-              <li>Versatile applications in cooking, heating..</li>
-              <li>Efficient for automotive use..</li>
-              <li>Widely available and portable..</li>
-              <li>Environmentally friendly..</li>
-            </ul>
-          </div>
-        </div>
-      </div> 
-    </div>
-  </section> -->
-
-
   <!-- FOOTER -->
 
   <section class="footer">
@@ -492,8 +342,6 @@
       <div class="row equal-spacing">
         <!-- frame 35 -->
         <div class="col-md-3 mb-4">
-          <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
-                      class="img-fluid-footer-logo"> -->
           <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo" class="img-fluid-footer-logo">
           <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
             trade, a company that thrives on connecting the world through commerce.</p>
@@ -524,13 +372,6 @@
             <br>
             <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
           </div>
-          <!-- <div class="frame-35-icon pt-3">
-                      <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-                      <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-                      <img src="assets/images/footer-section/Group (3).png" alt="icon">
-                      <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-                      <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
-                  </div> -->
           <div class="footer-icon-container">
             <a class="social-icon" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-facebook"></i>
